# arm-nucleo-prolepsis

./: README.md
debug/: run.gdb
doc/: arm-benchmarks-results.xlsx
sw/: CMakeLists.txt  cmake_configure.nucleo.gcc.sh
sw/apps/: CMakeLists.txt
sw/apps/embench_mod/aha-mont64_mod/: aha-mont64_mod.s
sw/apps/embench_mod/crc32_mod/: crc32_mod.s
sw/apps/embench_mod/cubic_mod/: cubic_mod.s
sw/apps/embench_mod/edn_mod/: edn_mod.s
sw/apps/embench_mod/huffbench_mod/: huffbench_mod.s
sw/apps/embench_mod/matmult-int_mod/: matmult-int_mod.s
sw/apps/embench_mod/md5sum_mod/: md5sum_mod.s
sw/apps/embench_mod/minver_mod/: minver_mod.s
sw/apps/embench_mod/nbody_mod/: nbody_mod.s
sw/apps/embench_mod/nettle-aes_mod/: nettle-aes_mod.s
sw/apps/embench_mod/nettle-sha256_mod/: nettle-sha256_mod.s
sw/apps/embench_mod/nsichneu_mod/: nsichneu_mod.s
sw/apps/embench_mod/picojpeg_mod/: picojpeg_mod.s
sw/apps/embench_mod/primecount_mod/: primecount_mod.s
sw/apps/embench_mod/qrduino_mod/: qrduino_mod.s
sw/apps/embench_mod/sglib-combined_mod/: sglib-combined_mod.s
sw/apps/embench_mod/slre_mod/: slre_mod.s
sw/apps/embench_mod/st_mod/: st_mod.s
sw/apps/embench_mod/statemate_mod/: statemate_mod.s
sw/apps/embench_mod/tarfind_mod/: tarfind_mod.s
sw/apps/embench_mod/ud_mod/: ud_mod.s
sw/apps/embench_mod/wikisort_mod/: wikisort_mod.s
sw/ref/: startup_stm32f429xx.S  stm32f4xx.ld
sw/support/: CMakeLists.txt
sw/support/inc/: beebsc.h  boardsupport.h  stm32f429xx.h  system_stm32f4xx.h
sw/support/src/: main.c
sw/utils/: build_all_embench.py  build_all_embench_mod.py
